# recoverhvac-revenue-os

./: .env.example  .gitignore  MAC_SETUP.md  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json
.openai/: hosting.json
docs/: adr-001-agent-runtime.md
docs/specs/: industry-neutral-product-rebuild.md  interactive-conversion-upgrade.md  landing-clarity-and-intake-reliability.md  product-boundary-and-runtime-repair.md  public-sales-and-owner-access.md  revenue-os-realignment.md
scripts/: clean-next-build.mjs  package-sites.mjs  preview-dev.mjs
services/audit-runner/: Dockerfile  README.md  index.js  package.json
services/voice-agent/: Dockerfile  README.md  pyproject.toml
services/voice-agent/recover_voice/: __init__.py  agent.py  prompt.py
services/voice-agent/tests/: test_prompt.py
src/app/: account.css  additions.css  globals.css  landing.css  layout.tsx  login.css  owner.css  page.tsx  premium.css
src/components/: account-form.tsx  frontend-dashboard.tsx  icon.tsx  landing-experience.tsx  operator-app.tsx  owner-operations.tsx  recovery-calculator.tsx
src/domain/: call-state.test.ts  call-state.ts  campaign-policy.test.ts  campaign-policy.ts  order-state.test.ts  order-state.ts  policy.test.ts  policy.ts
src/integrations/: config.ts  contracts.ts
src/lib/: account-auth.ts  landing-content.test.ts  landing-content.ts  (+4 more)
tasks/: plan.md  todo.md
worker/: auth.js  auth.test.ts  golden-path.js  golden-path.test.ts  index.js  index.test.ts  signatures.js  signatures.test.ts  workflow-queue.js  workflow-queue.test.ts
(+46 files in other folders)
