[project]
name = "recover-voice-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["livekit-agents[openai,deepgram,cartesia]==1.6.6"]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "ruff>=0.12,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
